--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,14 @@
-.App {
-  text-align: center;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #8ec5c6;
-  height: 5vh;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.bg-main{
+  background-image: url("./img/bg9.png"); 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  color: rgb(255, 254, 254);
+  width: 100vw;
+  height: 100vh;
   display: flex;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  flex-direction: row;
 }
 
 header a {
@@ -33,12 +19,13 @@ header a {
 header img {
   height: 1em;
   width: 1em;
-  background-color: aliceblue;
+  background-color: transparent;
 }
 
 @media screen and (min-width:70em) {
   .App-header {
-    background-color: #8ec5c6;
+    background-color: #76756194;
+    width: 100vw;
     height: 5vh;
     font-size: calc(10px + 2vmin);
     color: white;
@@ -46,13 +33,18 @@ header img {
     align-items: center;
     flex-flow: row-reverse;
     gap: 1em;
+    position: absolute;
+    box-shadow: 0 0 5px 4px #373825;
+    font-weight: bold;
   }
 
   nav{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    width: 50vw;
   }
+
   header nav:nth-of-type(2){
     gap: 2em;
   }
@@ -60,49 +52,13 @@ header img {
     gap: 0.5em;
   }
 
+  a{
+    transition: transform .2s;
+  }
+
+  a:hover{
+    transform: scale(1.3);
+  }
+
 }
 
-@media screen and (min-width:50em) and (max-width:70em) {
-  .App-header {
-    background-color: #8ec5c6;
-    height: 5vh;
-    font-size: calc(10px + 2vmin);
-    color: white;
-    display: flex;
-    align-items: center;
-    flex-flow: row-reverse;
-    gap: 1em;
-  }
-  nav{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-  header nav:nth-of-type(2){
-    gap: 2em;
-  }
-  header nav nav{
-    gap: 0.5em;
-  }
-}
-
-@media screen and (max-width:50em){
-  .App-header {
-    background-color: #8ec5c6;
-    height: 5vh;
-    font-size: calc(10px + 2vmin);
-    color: white;
-    display: flex;
-    align-items: center;
-    flex-flow: column;
-    gap: 1em;
-  }
-  nav{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-  header nav{
-    gap: 0.5em;
-  }
-}
