--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
 
 .App{
   animation: bg-blur 1s;
+  transition: background-color .5s;
 }
 
 #nav-button{
@@ -46,7 +47,7 @@ header{
 .App-header {
   background-color: #76756194;
   width: 100vw;
-  height: 2.5em;
+  height: 2em;
   font-size: calc(10px + 2vmin);
   color: white;
   display: flex;
@@ -61,22 +62,16 @@ nav{
   display: flex;
   flex-direction: row;
 }
-
-
-
 @media screen and (min-width:80em) {
   .App-header {
     flex-flow: row-reverse;
     align-items: center;
   }
-
+  #nav-menu{
+    padding-right: 1em;
+  }
   .bg-main{
     background-position: right;
-  }
-
-  nav{
-    width: 60vw;
-    justify-content: space-evenly;
   }
 
   header nav:nth-of-type(2){
@@ -94,7 +89,6 @@ nav{
   .scale{
     transition: transform .2s;
   }
-  
   .scale:hover{
     transform: scale(1.3);
   }
@@ -106,7 +100,6 @@ nav{
     flex-flow: row-reverse;
     align-items: center;
   }
-
   .bg-main{
     background-position: right;
   }
@@ -173,18 +166,19 @@ nav{
   #nav-menu a{
     align-content: center;
     display: grid;
-    margin-left: 2em;
+    align-self: center;
+  }
+  #nav-menu a:nth-of-type(2){
+    margin-top: 3em;
   }
   #nav-button a{
     align-self: center;
   }
-
   #close-nav-btn{
     right: 0;
     position: absolute;
     padding-right: 2em;
   }
-
   @keyframes menuSlideInLeft {
     0% {
       transform: translateX(-100%);
