--- a/src/Components/Flyer/Flyer.css
+++ b/src/Components/Flyer/Flyer.css
@@ -1,6 +1,6 @@
 
-.flyer-wrapper{
-    height: 100vh;
+#Flyer{
+    height: 100%;
     position: absolute;
     display: flex;
     margin-left: 1em;
@@ -11,15 +11,24 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background: #8f908b;
-  padding: .5em 0 .5em 0em;
-  border-radius: 2.5em;
   animation: 1.5s ease-out 0s 1 slideInLeft;
-  gap: .5em;
   align-items: center;
   align-self: center;
   transition: .5s;
   overflow: hidden;
+}
+
+#acc-img {
+  background: #8f908b;
+  border-radius: 20px;
+  width: 2.5em;
+  text-align: center;
+  transition: .5s;
+  padding-top: 5px;
+}
+
+.rotate-carret{
+  transform: rotate(90deg);
 }
 
 @keyframes slideInLeft {
@@ -38,10 +47,6 @@
   width: 2em;
 }
 
-/* #flyer-links{
-  display: none;
-} */
-
 .show{
   display: contents;
 }
@@ -50,38 +55,45 @@
   transition: .5s ease-out;
 }
 
-.scale-column{
-  height: 10em;
+#flyer-links-wrap{
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  background: #8f908b;
+  justify-content: space-around;
+  transition: 1s;
+}
+
+#flyer-links-wrap{
+  height: 0;
+  border-radius: 0 0 20px 20px;
+  width: 2.5em;
+  text-align: center;
+}
+.acc-border-clip{
+  border-radius: 20px 20px 0 0 !important;
 }
 
 @media screen and (min-width:80em){
-  .flyer-acordian{
-    height:"12em";
+  
+  #flyer-links-wrap a:nth-of-type(1){
+    margin-top: 1em;
   }
-  #flyer-links-wrap{
-    display: flex;
-    flex-direction: column;
-    height: 0;
-    overflow: hidden;
-    transition: .5s;
+  .expand-flyer{
+    height: 155px !important;
   }
-  .scale-column{
-    height: 10em;
-  }
+  
 }
 
 @media screen and (min-width:50em) and (max-width:80em){
   #flyer-links-wrap{
-    display: flex;
-    flex-direction: row;
-    width: 0;
     height: 0;
-    overflow: hidden;
-    transition: .5s;
   }
-  .scale-column{
-    height: 10em;
-    width: 2em;
+  #flyer-links-wrap a:nth-of-type(1){
+    margin-top: 1em;
+  }
+  .expand-flyer{
+    height: 155px !important;
   }
 }
 
@@ -97,26 +109,43 @@
     padding: .3em;
     transition: .5s;
   }
-  #flyer-links{
-    height: 2em;
-    /* overflow: hidden; */
+  #flyer-links-wrap{
+    flex-direction: row;
+    height: 2.5em;
+    border-radius: 0 20px 20px 0;
+    width: 0;
+    align-items: center;
   }
   .flyer-wrapper{
     width: 100vw;
     position: absolute;
     display: flex;
     justify-content: center;
-    margin: 0;
   }
   .flyer-acordian{
     width:"12em" !important;
   }
-  .rotate-90{
-    transform:'rotate(90deg)';
+  .acc-border-clip{
+    border-radius: 20px 0 0 20px !important;
   }
-  .rotate-0{
-    transform:'rotate(90deg)';
+  .expand-flyer{
+    width: 155px !important;
   }
+  #carret-logo{
+    transform: rotate(-90deg);
+  }
+  .rotate-carret {
+    transform: rotate(0deg) !important;
+  }
+  #Flyer{
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    
+}
 
   @keyframes slideInTop {
     0% {
