--- a/src/Components/Home/HomeStyle.css
+++ b/src/Components/Home/HomeStyle.css
@@ -75,19 +75,30 @@
   }
 }
 
-@media screen and (min-width:50em) and (max-width:80em) and (max-height:50em){
+@media screen and (min-width:40em) and (max-width:80em)  and (max-height:30em){
+  .bg-main{
+    display: grid;
+  }
+  .info{
+      display: flex;
+      height: 100%;
+      justify-content: center;
+      padding: 0;
+      justify-self: center;
+  }
   .info-l1{
-    font-size: 3em;
+      font-size: 2em;
   }
   .info-l2{
-    font-size: 2em;
+      font-size: 1.5em;
   }
   .info-l3{
-    font-size: 1.5em;
+      font-size: 1.2em;
   }
+  
 }
 
-@media screen and (max-width:50em) {
+@media screen and (max-width:40em) {
   .info-l1{
     font-size: 3em;
   }
@@ -103,7 +114,6 @@
   .info{
     padding: 0em 3em 0 3em;
     align-self: center;
-    margin-top: 20em;
   }
 }
 
