--- a/src/App.scss
+++ b/src/App.scss
@@ -1,18 +1,12 @@
-.bg-main{
-    background-image: url("./img/bg9.png"); 
-    background-size: cover;
-    height: 100vh;
-  }
-  
   .App{
-    animation: bg-blur 1s;
     transition: background-color .5s;
   }
   
-  #nav-button{
-    display: none;
+  .tab{
+    min-width: 100vw;
+    min-height: 100vh;
   }
-  
+
   @keyframes bg-blur {
     0% { filter: blur(5px);}
     50% { filter: blur(4px);}
@@ -20,83 +14,30 @@
     100% { filter: blur(0px);}
   }
   
-  header a {
-    text-decoration: auto;
-    color: inherit;
+  a:hover{
+    cursor: pointer;
   }
-  
-  header img {
-    height: 1em;
-    width: 1em;
-    background-color: transparent;
-  }
-  
-  header{
-    animation: 1.5s ease-out 0s 1 slideInTop-head;
-  }
-  
+    
   @keyframes slideInTop-head {
     0% {
       transform: translateY(-150%);
+      box-shadow: 0 0 5px 4px #7c7c78;
+    }
+    50% {
+      transform: translateY(-100%);
+      box-shadow: 0 0 3px 2px #b9b9b5;
     }
     100% {
       transform: translateY(0);
-    }
-  }
-  
-  .App-header {
-    background-color: #76756194;
-    width: 100vw;
-    height: 2em;
-    font-size: calc(10px + 2vmin);
-    color: white;
-    display: flex;
-    gap: .5em;
-    position: fixed;
-    box-shadow: 0 0 5px 4px #373825;
-    font-weight: bold;
-    z-index: 1;
-  }
-  
-  nav{
-    display: flex;
-    flex-direction: row;
-  }
-  @media screen and (min-width:80em) {
-    .App-header {
-      flex-flow: row-reverse;
-      align-items: center;
-    }
-    #nav-menu{
-      padding-right: 1em;
-    }
-    .bg-main{
-      background-position: right;
-    }
-    header nav:nth-of-type(2){
-      gap: 2em;
-    }
-    header nav nav{
-      gap: 0.5em;
-    }
-    #close-nav-btn{
-      display: none;
-    }
-    #nav-button{
-      display: none;
-    }
-    .scale{
-      transition: transform .2s;
-    }
-    .scale:hover{
-      transform: scale(1.3);
+      box-shadow: 0 0 px 1px #b2b2b2;
     }
   }
   
   @media screen and (min-width:40em) and (max-width:80em) {
     .App-header {
-      flex-flow: row-reverse;
+      flex-flow: nowrap;
       align-items: center;
+      justify-content: center;
     }
     .bg-main{
       background-position: right;
@@ -121,73 +62,5 @@
       transform: scale(1.3);
     }
   }
-  
-  @media screen and (max-width:40em) {
-    .App-header {
-      flex-flow: column;
-      height: 3em;
-    }
-    #nav-menu a{
-      height: 3em;
-    }
-    .bg-main{
-      background-position: right;
-      display: flex;
-    }
-    .nav-menu{
-      display: flex;
-      flex-direction: column;
-      width: 0;
-      height: 100vh;
-      /* padding: 0 2em 0 2em; */
-      background: #080807c7;
-      position: fixed;
-      overflow-x: hidden;
-      transition: 0.5s;
-    }
-    #nav-button{
-      display: grid;
-      height: 3em;
-      padding-left: 1em;
-    }
-    header nav nav{
-      gap: 0.5em;
-    }
-    .nav-menu-show{
-      display: flex;
-      left:   0;
-    }
-    .nav-menu-close{
-      display: none;
-      left:   -100%;
-    }
-    #nav-menu a{
-      align-content: center;
-      display: grid;
-      align-self: center;
-    }
-    #nav-menu a:nth-of-type(2){
-      margin-top: 3em;
-    }
-    #nav-button a{
-      align-self: center;
-    }
-    #close-nav-btn{
-      right: 0;
-      position: absolute;
-      padding-right: 2em;
-    }
-    @keyframes menuSlideInLeft {
-      0% {
-        transform: translateX(-100%);
-        left: -100%;
-      }
-      100% {
-        transform: translateX(0);
-        left: 0;
-      }
-    }
-  }
-  
   
   
