--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+  @use './css/Media';
+
   .App{
     transition: background-color .5s;
   }
@@ -33,7 +35,7 @@
     }
   }
   
-  @media screen and (min-width:40em) and (max-width:80em) {
+  @media #{Media.$ipad-pro-landscape} {
     .App-header {
       flex-flow: nowrap;
       align-items: center;
@@ -43,7 +45,7 @@
       background-position: right;
     }
     nav{
-      width: 100vw;
+      // width: 100vw;
       justify-content: space-evenly;
     }
     header nav nav{
