--- a/src/css/Header.scss
+++ b/src/css/Header.scss
@@ -61,11 +61,7 @@ header{
   //Ipad Pro Potrait
   @media #{Media.$ipad-pro-portrait}{
     #smodi {
-        margin-left: 5%;
-    }
-    .nav-link-wrap{
-        padding-right: 5%;
-        margin: 0;
+        margin-left: 10%;
     }
   }
 
@@ -117,13 +113,16 @@ header{
         margin-left: 5%;
     }
     #nav-bg-portrait{
+        height: 100vh;
+        width: 0;
         transition: .5s ease-in-out;
+        background: #646464cc;
+        z-index: 5;
+        position: fixed;
+        left: 50%;
     }
     .nav-greyout{
-        width: 100vw;
-        height: 100vh;
-        background: #646464cc;
-        z-index: 6;
-        position: absolute;
+        width: 100vw !important;   
+        left: 0 !important;
     }
 }
