--- a/src/css/Media.scss
+++ b/src/css/Media.scss
@@ -1,5 +1,5 @@
-$ipad-pro-landscape: "only screen and (min-width: 1024px) and (max-height: 1366px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1.5)";
-$ipad-pro-portrait: "only screen and (min-width: 768px) and (max-height: 1366px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1.5)";
+$ipad-pro-landscape: "only screen and (min-device-width: 724px) and (max-device-width: 1200px) and (-webkit-min-device-pixel-ratio: 2) and (orientation : landscape)";
+$ipad-pro-portrait: "only screen and (min-device-width: 724px) and (max-device-width: 1200px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 2)";
 $iphone-landscape: "only screen and (min-width: 320px) and (max-height: 640px) and (orientation: landscape)";
 $iphone-portrait: "only screen and (max-width: 480px) and (min-height:600px) and (orientation: portrait)";
 
