--- a/src/css/Skills.scss
+++ b/src/css/Skills.scss
@@ -1,6 +1,6 @@
 @use '../css/Media';
 
-#skills{
+.Skills{
     padding: 0 20% 0 20%;
     display: flex;
     align-items: center;
@@ -12,7 +12,7 @@
     flex-flow: row wrap;
     flex-wrap: wrap;
     gap: 1em;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .skills-wrapper{
@@ -24,7 +24,6 @@
 }
 
 .skill{
-    
     //background-color: rgb(74, 125, 127);
     font-size: 1em;
     font-weight: bold;
@@ -96,7 +95,7 @@
 }
 
 @media #{Media.$ipad-pro-landscape}{
-    #skills{
+    .Skills{
         padding: 10%;
         height: auto;
         min-height: 100vh;
@@ -104,7 +103,6 @@
     .skills-wrapper{
         width: 25em;
     }
-
   }
 
   @media #{Media.$ipad-pro-portrait}{
