--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,17 @@
   @use './css/Media';
 
+  /* Hide scrollbar for Chrome, Safari and Opera */
+.App::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.App {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+
   .App{
     transition: background-color .5s;
   }
