--- a/src/Components/Flyer/Flyer.scss
+++ b/src/Components/Flyer/Flyer.scss
@@ -56,7 +56,11 @@
 }
 
 #carret-logo{
-  transition: .5s ease-out;
+  animation: rotateInifinite 5s linear infinite;
+}
+
+@keyframes rotateInifinite {
+  100%{transform: rotate(-360deg);}
 }
 
 #flyer-links-wrap{
