--- a/src/css/Contact.scss
+++ b/src/css/Contact.scss
@@ -1,11 +1,12 @@
 @use '../css/Media';
 
 .Contact{
-    padding: 0 20% 0 20%;
+    padding: 10% 20% 0 20%;
     display: flex;
     align-items: center;
     min-height: 100vh;
     flex-direction: column;
+    gap: 1em;
 }
 
 // #contact article{
@@ -15,16 +16,16 @@
 .contact-form{
     display: flex;
     flex-direction: column;
-    width: 60%;
-    padding: 2em;
+    width: 50%;
+    padding: 20px;
     background-color: rgb(234 234 234);
     // box-shadow: 5px 5px 5px rgb(122, 122, 122);
     gap: .5em;
 }
-.contact-form label{
-    align-self: center;
-    font-size: 20px;
-    width: 200px;
+#contact main label{
+    font-size: calc(20px + 2vmin);
+    padding: 5px;
+    font-family: monospace;
 }
 
 .inputs{
@@ -35,8 +36,6 @@
 
 textarea, input[type="text"], input[type="email"]{
     height: 25px;
-    width: 100%;
-    max-width: 100%;
     padding: 5px;
     font-size: 15px;
     border-radius: 10px 0;
@@ -48,6 +47,7 @@ textarea{
     align-items: self-start;
     resize: none;
     overflow: hidden;
+    padding: 5px;
 }
 input[type="submit"]{
     width: 100px;
@@ -97,7 +97,7 @@ input[type="submit"]{
 }
 
 .contact-info-wrapper{
-    width: 40%;
+    width: 50%;
     display: flex;
     flex-direction: column;
     padding: 25px;
@@ -106,7 +106,7 @@ input[type="submit"]{
 #contact main{
     display: flex;
     justify-content: space-between;
-    width: 100%;
+    width: 80%;
     border-radius: 20px 0;
     background: #d9a6a6;
     overflow: hidden;
@@ -169,9 +169,31 @@ input[type="submit"]{
   }
 
   @media #{Media.$iphone-portrait}{
-    
+    .Contact{
+        padding: 20% 5%;
+    }
+    #contact main, .contact-form, .contact-info-wrapper{
+        width: auto;
+    }
+    #contact main{
+        flex-direction: column-reverse;
+    }
+    textarea{
+        height: 150px;
+    }
+    .skills-container{
+        justify-content: center;
+    }
   }
-  @media #{Media.$iphone-landscape} {
-    
+
+  @media #{Media.$iphone-landscape}{
+    .Contact{
+        padding: 0;
+    }
+    #contact main, .contact-form, .contact-info-wrapper{
+        width: auto;
+    }
   }
+  
+
 
