--- a/src/css/About.scss
+++ b/src/css/About.scss
@@ -1,10 +1,8 @@
 @use '../css/Media';
 
-#about{
-    padding: 0 20% 0 20%;
+.About{
     display: flex;
-    align-items: center;
-    min-height: 100vh;
+    padding: 100px 0;
 }
 
 section{
@@ -45,13 +43,14 @@ section{
 }
 
 .about-info{
-    font-size: calc(10px + 2vmin);
+    font-size: 20px;
 }
 .about-info-bg{
     border-radius: 20px;
     background: #d8d8d8b3;
-    padding: 10px;
+    padding: 20px;
     text-align:justify;
+    height: fit-content;
 }
 
 @keyframes slideInLeft {
@@ -69,18 +68,11 @@ section{
 
 
 @media #{Media.$ipad-pro-landscape}{
-    #about{
-        padding: 10%;
-        height: auto;
-        min-height: 100vh;
-    }
+    
   }
 
   @media #{Media.$ipad-pro-portrait}{
-    #about{
-        padding: 0 10% 0 10%;
-        min-height: 100vh;
-    }
+   
     .about-info img{
         width: 10em;
     }
