--- a/src/css/Skills.scss
+++ b/src/css/Skills.scss
@@ -50,11 +50,11 @@
 }
 .skill-name{
     width: fit-content;
-    background: rgb(22, 226, 237);
-    font-size: 1.2em;
-    border-radius: 10px 0 10px 0;
-    color: white;
+    font-size: 20px;
+    border-radius: 10px 0;
     padding: 5px;
+    border: 2px solid #728781;
+    font-family: serif;
 }
 
 @keyframes progress-bar-java {
